<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/nav_keys" android:icon="@drawable/ic_key" android:title="@string/nav_keys" app:showAsAction="never" />
    <item android:id="@+id/nav_replace" android:icon="@drawable/ic_replace" android:title="@string/nav_replace" app:showAsAction="never" />
    <item android:id="@+id/nav_proxies" android:icon="@drawable/ic_sync" android:title="@string/nav_proxies" app:showAsAction="never" />
    <item android:id="@+id/nav_security" android:icon="@drawable/ic_shield" android:title="@string/menu_security" app:showAsAction="never" />
    <item android:id="@+id/nav_stats" android:icon="@drawable/ic_chart" android:title="@string/nav_stats" app:showAsAction="never" />
    <item android:id="@+id/nav_requests" android:icon="@drawable/ic_monitor" android:title="@string/nav_requests" app:showAsAction="never" />
    <item android:id="@+id/nav_logs" android:icon="@drawable/ic_doc" android:title="@string/nav_logs" app:showAsAction="never" />
    <item android:id="@+id/nav_config" android:icon="@drawable/ic_key" android:title="@string/menu_config" app:showAsAction="never" />
    <item android:id="@+id/action_theme" android:icon="@drawable/ic_palette" android:title="@string/menu_theme" app:showAsAction="never" />
    <item android:id="@+id/action_termux_start" android:icon="@drawable/ic_play" android:title="@string/termux_start_backend" app:showAsAction="never" />
    <item android:id="@+id/action_connection" android:icon="@drawable/ic_settings" android:title="@string/menu_connection" app:showAsAction="never" />
</menu>
